  ADDED: Rewrite method to MultilingualManager and optimized create.

  FIXED: The update_translation_fields management command does nothing.
         (resolves issue #123)
  FIXED: MultilingualQuerySet custom inheritance.

CHANGED: Don't raise an exception if TranslationField is accessed via class
         to allow descriptor introspection.
         (resolves issue #131)


v0.5b1
======
Date: 2013-01-07
Packaged from revision da928dd431fcf112e2e9c4c154c5b69e7dadc3b3.

  ADDED: Possibility to turn off query rewriting in MultilingualManager.
         (thanks to Jacek Tomaszewski)

  FIXED: Fixed update_translation_fields management command.
         (thanks to Jacek Tomaszewski,
          resolves issues #123 and #124)

CHANGED: Major test refactoring.
         (thanks to Jacek Tomaszewski,
          resolves issues #100 and #119)


v0.5a1
======
Date: 2012-12-05
Packaged from revision da4aeba0ea20ddbee67aa49bc90af507997ac386.

  ADDED: Increased the number of supported fields. Essentially all Django
         model fields and subclasses of them should work, except related
         fields (ForeignKey, ManyToManyField, OneToOneField) and AutoField
         which are not supported.
  ADDED: A subclass of TranslationOptions inherits fields from its bases.
         (thanks to Bruno Tavares and Jacek Tomaszewski,
          resolves issue #110)
  ADDED: Support for fallback languages. Allows fine grained configuration
         through project settings and TranslationOptions on model basis.
         (thanks to Jacek Tomaszewski,
          resolves issue #104)
  ADDED: Multilingual manager which is aware of the current language.
         (thanks to Jacek Tomaszewski,
          resolves issues #45, #78 and #84)

CHANGED: Version code to use a PEP386 compliant version number.
CHANGED: Constructor rewrites fields to be language aware.
         (thanks to Jacek Tomaszewski,
          resolves issues #33 and #58)

  FIXED: Lacking support for readonly_fields in TranslationAdmin.